--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
   },
   "buildpacks": [
     {
-      "url": "https://github.com/heroku/heroku-buildpack-go"
+      "url": "https://github.com/heroku/heroku-buildpack-go",
+      "url": "https://github.com/iamashks/heroku-buildpack-tor-proxy.git"
     }
   ]
 }
