Update app.json for Tor on Heroku
Add heroku buildpack for Tor integration

--- a/app.json
+++ b/app.json
@@ -20,7 +20,9 @@
   },
   "buildpacks": [
     {
-      "url": "https://github.com/heroku/heroku-buildpack-go",
+      "url": "https://github.com/heroku/heroku-buildpack-go"
+    },
+    {
       "url": "https://github.com/iamashks/heroku-buildpack-tor-proxy.git"
     }
   ]
